--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,13 @@ lex.yy.c
 #test output files
 *.test
 *.mine
+
+#p2 Generated files
+lex.yy.c
+dpp.yy.c
+y.tab.c
+y.tab.h
+*.core
+core
+*~
+y.output dcc 
